# argoneum

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Jenkinsfile  Jenkinsfile.gitian  Makefile.am  README.md  bootstrap.md  configure.ac  libargoneumconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
ci/: Dockerfile.builder  Dockerfile.gitian-builder  build_src.sh  matrix.sh  test_integrationtests.sh  test_unittests.sh
contrib/: README.md  argoneum-cli.bash-completion  argoneum-qt.pro  argoneum-tx.bash-completion  argoneumd.bash-completion  gitian-build.py  gitian-build.sh  qt_translations.py  tidy_datadir.sh
dash-docs/: protocol-documentation.md
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  (+31 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  amount.cpp  argoneum-cli-res.rc  argoneum-cli.cpp  argoneum-tx-res.rc  argoneum-tx.cpp  argoneumd-res.rc  argoneumd.cpp  base58.h  batchedlogger.cpp  batchedlogger.h  bip39.h  bip39_english.h  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  dsnotificationinterface.cpp  flat-database.h  governance-classes.cpp  governance-classes.h  governance-exceptions.h  governance-object.cpp  governance-object.h  governance-validators.cpp  governance-validators.h  (+72 more)
src/bench/: .gitignore  bls.cpp  bls_dkg.cpp  crypto_hash.cpp  ecdsa.cpp  string_cast.cpp
src/bls/: bls.cpp  bls.h  bls_batchverifier.h  bls_ies.cpp  bls_ies.h  bls_worker.cpp  bls_worker.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: params.h
src/crypto/: common.h  skein.h
src/crypto/algos/: phi2.c
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.h  governance-types.cpp  governance-types.h
src/evo/: cbtx.cpp  cbtx.h  deterministicmns.cpp  deterministicmns.h  evodb.cpp  evodb.h  mnauth.cpp  mnauth.h  providertx.cpp  providertx.h  simplifiedmns.cpp  simplifiedmns.h  specialtx.cpp  specialtx.h
src/llmq/: quorums.cpp  quorums.h  quorums_blockprocessor.cpp  quorums_blockprocessor.h  quorums_chainlocks.cpp  quorums_chainlocks.h  quorums_commitment.cpp  quorums_commitment.h  quorums_debug.cpp  quorums_debug.h  quorums_dkgsession.cpp  quorums_dkgsession.h  quorums_dkgsessionhandler.cpp  quorums_dkgsessionhandler.h  quorums_dkgsessionmgr.cpp  quorums_dkgsessionmgr.h  quorums_dummydkg.cpp  quorums_dummydkg.h  quorums_init.cpp  quorums_init.h  quorums_instantsend.cpp  quorums_instantsend.h  quorums_signing.cpp  quorums_signing.h  quorums_signing_shares.cpp  quorums_signing_shares.h  quorums_utils.cpp  quorums_utils.h
src/policy/: policy.h
src/primitives/: block.cpp  transaction.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  argoneum.cpp  argoneum.qrc  argoneum_locale.qrc  argoneumstrings.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  macos_appnap.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qrdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  (+7 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: argoneum_ar.ts  argoneum_bg.ts  argoneum_de.ts  argoneum_en.ts  argoneum_es.ts  argoneum_fi.ts  argoneum_fr.ts  argoneum_it.ts  argoneum_ja.ts  argoneum_ko.ts  argoneum_nl.ts  argoneum_pl.ts  argoneum_pt.ts  argoneum_pt_BR.ts  argoneum_ru.ts  argoneum_sk.ts  argoneum_sv.ts  argoneum_th.ts  argoneum_tr.ts  argoneum_vi.ts  argoneum_zh_CN.ts  argoneum_zh_TW.ts
src/qt/res/: argoneum-qt-res.rc
src/qt/res/css/: crownium.css  drkblue.css  light-hires-retro.css  light-hires.css  light-retro.css  light.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile  rpcnestedtests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rpcevo.cpp  rpcquorums.cpp  server.cpp  server.h
src/script/: argoneumconsensus.cpp  argoneumconsensus.h
src/support/: lockedpool.cpp  pagelocker.cpp
src/support/allocators/: mt_pooled_secure.h  pooled_secure.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bls_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  evo_deterministicmns_tests.cpp  evo_simplifiedmns_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  (+33 more)
src/test/data/: README.md  bitcoin-util-test.json  proposals-invalid.json  proposals-valid.json  proposals_invalid.json  proposals_valid.json
src/wallet/: rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqconfig.h
(+148 files in other folders)
